--- a/test/src/style.css
+++ b/test/src/style.css
@@ -25,8 +25,9 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 10px;
+  font-size: 20px;
   background: white;
+  text-align: center;
 }
 
 .main {
